--- a/saasapp/Gemfile
+++ b/saasapp/Gemfile
@@ -31,6 +31,9 @@ gem 'jbuilder', '2.5.0'
 # Using Twitter Bootstrap library for front-end UI and layout
 gem 'bootstrap-sass', '3.3.7'
 
+# Using Font Awesome library for icons
+gem 'font-awesome-sass', '4.6.2'
+
 group :development, :test do
   # Use sqlite3 as the database for Active Record
   gem 'sqlite3'
